add roster details view for participant

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         </activity>
         <activity android:name=".RosterActivity">
         </activity>
+        <activity android:name=".ParticipantActivity">
+        </activity>
     </application>
 
 </manifest>
